# black

./: .travis.yml  CONTRIBUTING.md  _black_version.py  black.py  build.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  test.yml
src/black/: __init__.py  const.py  linegen.py  lines.py  strings.py
tests/: test_black.py
tests/data/: cantfit.py  comments4.py  composition.py  expression.diff  expression.py  function.py
