# Example configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''


# Build system information below.
# NOTE: You don't need this in your own Black configuration.

[build-system]
requires = ["setuptools>=41.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "black"
version = "19.12b0"
description = "The uncompromising code formatter."
license = "MIT"
authors = ["Łukasz Langa <lukasz@langa.pl>"]
readme = "README.md"
homepage = "https://github.com/psf/black"
documentation = "https://black.readthedocs.io"
classifiers=[
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Quality Assurance",
    ]

[tool.poetry.scripts]
black = "black:patched_main"

[tool.poetry.extras]
d = ["aiohttp", "aiohttp-cors"]

[tool.poetry.dependencies]
python = "^3.6"
click = ">=6.5"
attrs = ">=18.1.0"
appdirs = "*"
toml = ">=0.9.4"
typed-ast = ">=1.4.0"
regex = "!=2019.12.9"
pathspec = ">=0.6, <1"
dataclasses = {version = ">=0.6", python = "<3.7"}
typing_extensions = ">=3.7.4"
mypy_extensions = ">=0.4.3"

aiohttp = {version = ">=3.3.2", optional = true}
aiohttp-cors = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "*"
coverage = "*"
docutils = "==0.15"
flake8 = "*"
flake8-bugbear = "*"
flake8-mypy = "*"
mypy = ">=0.740"
readme_renderer = "*"
recommonmark = "*"
Sphinx = "*"
setuptools = ">=39.2.0"
twine = ">=1.11.0"
wheel = ">=0.31.1"
setuptools-scm = "*"
